--- a/src/ex01_format/Table2.html
+++ b/src/ex01_format/Table2.html
@@ -7,19 +7,22 @@
 <body>
 	<table border="1">
 		<tr>
-			<th>Header 1</th><th>Header 2</th>
+			<th>Header 1</th>
+			<th>Header 2</th>
 		</tr>
 		<tr>
-			<td>2행 1열</td><td>2행 2열</td>
+			<td>2행 1열</td>
+			<td>2행 2열</td>
 		</tr>
 		<tr>
-			<td>3행 1열</td><td>3행 2열</td>
+			<td>3행 1열</td>
+			<td>3행 2열</td>
 		</tr>
-	
-	
+
+
 	</table>
-	
-		
-		
+
+
+
 </body>
 </html>
