--- a/src/ex01_format/Table6.html
+++ b/src/ex01_format/Table6.html
@@ -5,31 +5,28 @@
 <title>Insert title here</title>
 </head>
 <body>
-	
-	
-	<table border="1"
-			width="400px"
-			height="400px"
-			align="center">
-			<!--  전체 크기 지정 -->
+
+
+	<table border="1" width="400px" height="400px" align="center">
+		<!--  전체 크기 지정 -->
 		<tr>
-			<td width="50%" rowspan="3" align="center"> 과일 </td> 
+			<td width="50%" rowspan="3" align="center">과일</td>
 			<!-- 해당 열이 차지하는 너비 비율 50% -->
-			<td align = "center"> 사과 </td>
+			<td align="center">사과</td>
 		</tr>
-		
-		
+
+
 		<tr>
-			<td align="center"> 배 </td>		
+			<td align="center">배</td>
 		</tr>
-		
-		
+
+
 		<tr>
-			<td align="center"> 포도 </td>
+			<td align="center">포도</td>
 		</tr>
-	
-	
+
+
 	</table>
-		
+
 </body>
 </html>
