--- a/src/ex01_format/Table_advanced.html
+++ b/src/ex01_format/Table_advanced.html
@@ -16,39 +16,43 @@
 						
 			3. 꼬리말에 해당하는 요소 - <tfoot>
 						표 내에서 한 번만 사용할 수 있다. -->
-	
-			
+
+
 	<table border="1">
-		<caption> 추천 도서 표</caption> <!-- 표 위에 이름 -->
-			<thead> <!-- 표의 헤더 영역부분 <th>를 사용하여 각 열의 데이터 이름 및 속성 표시 -->
-			<tr>	
-				<th>책제목</th> 
+		<caption>추천 도서 표</caption>
+		<!-- 표 위에 이름 -->
+		<thead>
+			<!-- 표의 헤더 영역부분 <th>를 사용하여 각 열의 데이터 이름 및 속성 표시 -->
+			<tr>
+				<th>책제목</th>
 				<th>작가</th>
 				<th>가격</th>
 			</tr>
-			</thead>
-		<tbody> <!-- 표의 몸 통 표의 내용 영역 부분-->
+		</thead>
+		<tbody>
+			<!-- 표의 몸 통 표의 내용 영역 부분-->
 			<tr>
 				<th>스티브잡스</th>
 				<td>월터아이작슨 저, 안진환 역</td>
 				<td>25,000원</td>
 			</tr>
 			<tr>
-				<th> 나를 지키는 말 88</th>
-				<td> 손화신, 쌤앤파커스</td>
+				<th>나를 지키는 말 88</th>
+				<td>손화신, 쌤앤파커스</td>
 				<td>25,000원</td>
 			</tr>
 		</tbody>
-		
-		<tfoot> <!-- 표의 추가 정보나 총합 등을 넣는 영역 -->
+
+		<tfoot>
+			<!-- 표의 추가 정보나 총합 등을 넣는 영역 -->
 			<tr>
 				<th>총</th>
 				<td>2권</td>
 				<td>30,000원</td>
 			</tr>
 		</tfoot>
-	
-	</table>			
-		
+
+	</table>
+
 </body>
 </html>
