--- a/src/ex03_form/Form_ID_Get.html
+++ b/src/ex03_form/Form_ID_Get.html
@@ -6,14 +6,12 @@
 </head>
 <body>
 	<form method="get" action="result.html">
-		아이디 : &nbsp; 
-		<input type="text" value="" name="ID"> <br>
-		비밀번호 : &nbsp;
-		<input type="password" name="PASS" maxLength="3"> <br>
-		<input type="submit" value="회원가입">
+		아이디 : &nbsp; <input type="text" value="" name="ID"> <br>
+		비밀번호 : &nbsp; <input type="password" name="PASS" maxLength="3">
+		<br> <input type="submit" value="회원가입">
 	</form>
-	
-		
-		
+
+
+
 </body>
 </html>
