--- a/src/ex03_form/Form_Text_pass.html
+++ b/src/ex03_form/Form_Text_pass.html
@@ -5,15 +5,15 @@
 <title>텍스트 입력 예제</title>
 </head>
 <body>
-	<h3> 문자열, 암호 입력 및 텍스트 영역</h3>
+	<h3>문자열, 암호 입력 및 텍스트 영역</h3>
 	<!-- method 속성 생략시 method="get" 을 의미한다. -->
 	<form action="result.html">
 		<!-- name : 요소의 이름,
 			 value : 초기 텍스트,
 			 disabled : 태그를 사용할 수 없다. 이 경우 submit 시 값이 있어도 넘어가지 않는다.  -->
-	<input type="text" value="좋은아침" name="id"><br>
-	<input type="submit" value="회원가입">
+		<input type="text" value="좋은아침" name="id"><br> <input
+			type="submit" value="회원가입">
 	</form>
-		
+
 </body>
 </html>
