--- a/src/ex01_format/Paragraph.html
+++ b/src/ex01_format/Paragraph.html
@@ -26,21 +26,21 @@
 	<hr color='red'>
 
 	<h1>형식 그대로</h1>
-	일반적인 HTML 문서에는 Enter 키나 공백(space)을 인식하지 못한다.
-	공백 인식 방법은
+	일반적인 HTML 문서에는 Enter 키나 공백(space)을 인식하지 못한다. 공백 인식 방법은
 	&nbsp;&nbsp;&nbsp; 이다
 	<!-- no break space -->
-	
+
 	<pre> 하지만 &lt;pre&gt; 태그 내부에서는 HTML 문서에 입력된 그대로 출력 된다.
 	</pre>
-	
+
 	<h1>인용</h1>
-	<blockquote> <!-- 내용을 들여 쓰기 한다. -->
-		&lt; or &gt; 와 같은 특수문자는 웹 문서에서 태그를 표현하기 위해 사용하고 있다.
-			그래서 직접 사용할 수 없다. 이를 해결하기 위해 특수문자를 사용한다. <br>
-		&#169; &#945; &#8364; &amp; &quot; &dArr;
+	<blockquote>
+		<!-- 내용을 들여 쓰기 한다. -->
+		&lt; or &gt; 와 같은 특수문자는 웹 문서에서 태그를 표현하기 위해 사용하고 있다. 그래서 직접 사용할 수 없다.
+		이를 해결하기 위해 특수문자를 사용한다. <br> &#169; &#945; &#8364; &amp; &quot;
+		&dArr;
 	</blockquote>
-	
-	
+
+
 </body>
 </html>
