--- a/src/ex02_hyperlink/Video.html
+++ b/src/ex02_hyperlink/Video.html
@@ -5,12 +5,9 @@
 <title>비디오 삽입하기</title>
 </head>
 <body>
-	<video  controls
-			autoplay
-			width="360px"
-			height="240px"
-			src="video\bear.mp4">
+	<video controls autoplay width="360px" height="240px"
+		src="video\bear.mp4">
 	</video>
-		
+
 </body>
 </html>
