--- a/src/ex02_hyperlink/ex302_Internal.html
+++ b/src/ex02_hyperlink/ex302_Internal.html
@@ -87,13 +87,13 @@
 					<li>출판사 : 햇살출판사</li>
 					<li>책소개 : HTML은 Hyper Text Markup Language의 약자입니다. HTML은 웹
 						페이지를 만들기 위한 표준 마크업 언어입니다. HTML은 웹 페이지의 구조를 설명합니다. CSS는 페이지의 스타일을
-						만드는 데 이용하는 스타일시트 언어입니다. 이것은 브라우저에게 색깔, 폰트, 레이아웃 등을 변경하라고 알립니다.
-					</li>
+						만드는 데 이용하는 스타일시트 언어입니다. 이것은 브라우저에게 색깔, 폰트, 레이아웃 등을 변경하라고 알립니다.</li>
 				</ul>
 			</td>
 		</tr>
 	</table>
 	<a href="#top">맨 위로</a>
-	<a href="#">맨 위로</a> <!-- #만 있어도 홈페이지의 맨 위로 이동한다. -->
+	<a href="#">맨 위로</a>
+	<!-- #만 있어도 홈페이지의 맨 위로 이동한다. -->
 </body>
 </html>
