--- a/src/ex03_form/Form_ID_hidden_Post.html
+++ b/src/ex03_form/Form_ID_hidden_Post.html
@@ -5,18 +5,15 @@
 <title>Insert title here</title>
 </head>
 <body>
-		<form method="post" action="result.html">
-		아이디 : &nbsp; 
-		<input type="text" value="" name="ID"> <br>
-		비밀번호 : &nbsp;
-		<input type="password" name="PASS" maxLength="3"> <br>
-		
-		Hidden : <input type="hidden" name="hide" value="안보여"><br>
-		
+	<form method="post" action="result.html">
+		아이디 : &nbsp; <input type="text" value="" name="ID"> <br>
+		비밀번호 : &nbsp; <input type="password" name="PASS" maxLength="3">
+		<br> Hidden : <input type="hidden" name="hide" value="안보여"><br>
+
 		<input type="submit" value="회원가입">
 	</form>
-	
-		
-		
+
+
+
 </body>
 </html>
