--- a/src/ex03_form/Form_Time.html
+++ b/src/ex03_form/Form_Time.html
@@ -17,8 +17,7 @@
 				<td><input type="datetime-local" name="datetime-local"></td>
 			</tr>
 		</table>
-		<br>
-		&nbsp;&nbsp;&nbsp;<input type="submit" value="전송">		
+		<br> &nbsp;&nbsp;&nbsp;<input type="submit" value="전송">
 	</form>
 </body>
 </html>
