--- a/src/ex03_form/Form_adv_text.html
+++ b/src/ex03_form/Form_adv_text.html
@@ -2,29 +2,41 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>고급 형식으로 입력하기 : 서식이 있는 텍스트 </title>
+<title>고급 형식으로 입력하기 : 서식이 있는 텍스트</title>
 </head>
 <body>
 	<form action="result.html">
 		<!-- type="email" : 이메일을 입력 받기 위한 입력 창
 			 required 속성 : 사용자가 필수적으로 입력을 하도록 검증한다. -->
-		<p>Email : <input type="email" name="email" required></p>
-		<p><input type="submit" value="전송"></p>
+		<p>
+			Email : <input type="email" name="email" required>
+		</p>
+		<p>
+			<input type="submit" value="전송">
+		</p>
 	</form>
-	
+
 	<!-- 폼 데이터를 제출하기 전 입력된 값이 유효한 URL 주소인지 여부를 자동으로 검증한다. -->
 	<form action="result.html">
-		<p>URL : <input type="url" name="url" required></p>
-		<p><input type="submit" value="전송"></p>
+		<p>
+			URL : <input type="url" name="url" required>
+		</p>
+		<p>
+			<input type="submit" value="전송">
+		</p>
 	</form>
-		
+
 	<!-- URL 프로토콜은 http:// 를 요구하므로 기본 값으로 입력해 놓는다. -->
 	<form action="result.html">
-		<p>URL : <input type="url" name="url" value="http://" required></p>
-		<p><input type="submit" value="전송"></p>
+		<p>
+			URL : <input type="url" name="url" value="http://" required>
+		</p>
+		<p>
+			<input type="submit" value="전송">
+		</p>
 	</form>
-	
-	
+
+
 	<!-- 1. type="tel" : 전화번호를 입력할 수 있는 입력 창
 		 
 		 2. placeholder : 입력 값에 대한 힌트 또는 예시 값을 나타낸다. 직접 입력하면 해당값이 사라진다.
@@ -39,22 +51,27 @@
 		 			
 		 		의미)	
 		 			"[0-9]" => "[0123456789]"
-		 			"[A-Z]" => "[ABCDEFGHIJKLMNOPQRSTUVWXYZ]" -->	
-	
+		 			"[A-Z]" => "[ABCDEFGHIJKLMNOPQRSTUVWXYZ]" -->
+
 	<form action="result.html">
-		<p>Tel : <input type="tel" 
-						placeholder="00*-000*-0000"
-						name="tel"
-						pattern="[0-9]{2,3}-[0-9]{3,4}-[0-9]{4}"
-						required></p>
-						<!-- 0~9 의 숫자를 2~3개 - 0~9의 숫자를 3~4개 - 0~9의 숫자를 4개 -->
-		<p><input type="submit" value="전송"></p>
+		<p>
+			Tel : <input type="tel" placeholder="00*-000*-0000" name="tel"
+				pattern="[0-9]{2,3}-[0-9]{3,4}-[0-9]{4}" required>
+		</p>
+		<!-- 0~9 의 숫자를 2~3개 - 0~9의 숫자를 3~4개 - 0~9의 숫자를 4개 -->
+		<p>
+			<input type="submit" value="전송">
+		</p>
 	</form>
-	
+
 	<form action="result.html">
-	<!-- 입력한 텍스트를 한 번에 지울 수 있는 x 버튼이 추가되어 있다.  -->
-		<p>Search : <input type="search" name="search" placeholder="Search..."></p>
-		<p><input type="submit" value="전송"></p>
+		<!-- 입력한 텍스트를 한 번에 지울 수 있는 x 버튼이 추가되어 있다.  -->
+		<p>
+			Search : <input type="search" name="search" placeholder="Search...">
+		</p>
+		<p>
+			<input type="submit" value="전송">
+		</p>
 	</form>
 </body>
 </html>
