--- a/src/ex03_form/Label_display_none.html
+++ b/src/ex03_form/Label_display_none.html
@@ -7,17 +7,16 @@
 <body>
 	<h3>업로드할 파일을 선택하세요</h3>
 	<form method="get" action="result.html">
-		<label>
-			<img src="image\save.png" height="50px" width="50px">
-			<input type="file" name="fileupload" style="display:none">
+		<label> <img src="image\save.png" height="50px" width="50px">
+			<input type="file" name="fileupload" style="display: none">
 		</label>
-		
+
 		<hr>
-		<input type="submit" value="전송">	
-		<input type="reset" value="취소">
+		<input type="submit" value="전송"> <input type="reset"
+			value="취소">
 	</form>
-	
-		
-		
+
+
+
 </body>
 </html>
