--- a/src/how_to/Login.html
+++ b/src/how_to/Login.html
@@ -6,18 +6,22 @@
 </head>
 <body>
 	<form action="*">
-		<img src="https://cdn3.iconfinder.com/data/icons/feather-5/24/award-512.png" width="100px" height="100px">
+		<img
+			src="https://cdn3.iconfinder.com/data/icons/feather-5/24/award-512.png"
+			width="100px" height="100px">
 		<div>
-			<label for="user_name">User Name</label>
-			<input type="text" id="user_name" name="user_name">
+			<label for="user_name">User Name</label> <input type="text"
+				id="user_name" name="user_name">
 		</div>
 		<div>
-			<label for="pass">PassWord</label>
-			<input type="password" id="pass" name="password">
+			<label for="pass">PassWord</label> <input type="password" id="pass"
+				name="password">
 		</div>
-		<input type="checkbox" checked="checked" name="remember"> Remember Me <br>
-		<button type="submit">Login</button> &nbsp;
-		<button type="button">Cancel</button>	
+		<input type="checkbox" checked="checked" name="remember">
+		Remember Me <br>
+		<button type="submit">Login</button>
+		&nbsp;
+		<button type="button">Cancel</button>
 	</form>
 
 </body>
