--- a/src/ex04_css/Table_CSS_EX2.html
+++ b/src/ex04_css/Table_CSS_EX2.html
@@ -4,16 +4,16 @@
 <meta charset="UTF-8">
 <title>시간표</title>
 <style>
-	table { width:1200px; height:300px;
-			border: 2px solid black;}
+	table { margin: 0 auto; text-align:center; }
 			
-	table caption {font-size:50px; text-align:center;}
+	table caption { font-size:50px; font-weight:bold; margin-bottom:20px; }
 	
-	table tr,td {width:100px; height:10px; text-align:center;
-				 border: 2px solid black;}
+	table, td, th { border: 2px solid black; }
 	
-	table th {background-color:skyblue; border: 2px solid black;
-			 }
+	table th { background-color:skyblue; width:150px; }
+			 
+	tr:hover { background-color:green; }
+	td:active { color:red; } 
 </style>
 </head>
 <body>
