--- a/Javascript/src/ex01/02_10_DateMath.html
+++ b/Javascript/src/ex01/02_10_DateMath.html
@@ -15,13 +15,13 @@
   				getDate() - 일
   				getDay() - 요일(0:일요일 ~ 6:토요일)
   				getHours() - 시간
-  				getMinute() - 분
+  				getMinutes() - 분
   				getSeconds() - 초
   				getMilliseconds() - 밀리초(1/1000초)를 리턴
   				getTime() - 1970년 1월 1일 부터 경과된 시간을 밀리초로 구함
-  				toLocaleString() - 객체의 시간 정보를 local 표현의 문자열로 리턴
+  				toLocaleString() - 객체의 시간 정보를 locale 표현의 문자열로 리턴
   				예) var today = new Date();
-  					var start = new Date(2018,10,7); //2018 11월 7일의 날짜 정보를 기억
+  					var start = new Date(2018,10,7); // 2018 11월 7일의 날짜 정보를 기억
   			
   		*/
   		// 시스템의 현재 날짜로 초기화된 Date 객체를 생성한다.
