--- a/Javascript/src/ex02/02_DOM_access3.html
+++ b/Javascript/src/ex02/02_DOM_access3.html
@@ -14,6 +14,7 @@
     		setInterval(function() {
     						today = new Date();
     						clock.innerHTML = today.toLocaleString();}, 1000);
+    						//toLocaleString() => 2024. 9. 24. 오전 9:05:26 와 같이 출력
     	}
     	
     </script>
