--- a/HTML/src/ex02_hyperlink/Image2_Hyper.html
+++ b/HTML/src/ex02_hyperlink/Image2_Hyper.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<table border="1" width="300px" heigth="300px" align="center">
+	<table border="1px solid black" width="300px" height="300px" text-align="center">
 		<thead>
 		<caption>참고도서 목록</caption>
 		<tr>
