--- a/JSP/src/main/webapp/ex3_bootstrap/_8.pagination/Ex_pagination.html
+++ b/JSP/src/main/webapp/ex3_bootstrap/_8.pagination/Ex_pagination.html
@@ -64,7 +64,7 @@
 		</table>
 	</div>
 	<div class="container d-flex flex-row-reverse">
-		<button type="button" class="btn btn-info btn-sm">글 쓰 기</button>
+		<button type="button" class="btn btn-info btn-sm" id="write">글 쓰 기</button>
 	</div>
 
 	<div class="container">
@@ -89,6 +89,19 @@
 
 			$(this).addClass('active');
 		})
+		
+		$("#write").click(function(){
+			location.href="write.html";
+		});
 	</script>
+	<!-- 
+		d-flex : 이 클래스는 디스플레이 속성을 flex 로 설정하여 해당 div 내부의 요소들이 플렉스 박스로 배치되도록 한다.
+		
+		justify-content-end : 이 클래스는 버튼을 부모영역의 오른쪽으로 정렬한다.
+		
+		참고) 
+			justify-content-start : 왼쪽 정렬
+			justify-content-center : 오른쪽 정렬
+	 -->
 </body>
 </html>
